--- a/.github/workflows/Master-Ubuntu.yaml
+++ b/.github/workflows/Master-Ubuntu.yaml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [buntu-latest]
+        os: [ubuntu-latest]
         configuration: [Debug, Release]
         
     steps: 
