removed the configuration from the ctest

--- a/.github/workflows/Master-Windows.yaml
+++ b/.github/workflows/Master-Windows.yaml
@@ -32,4 +32,4 @@ jobs:
           buildWithCMakeArgs: -v
       
       - name: Test
-        run: ctest -c ${{ matrix.configuration }}
+        run: ctest
