cd in the build directory prior to running cmake

--- a/.github/workflows/Master-Windows.yaml
+++ b/.github/workflows/Master-Windows.yaml
@@ -32,4 +32,6 @@ jobs:
           buildWithCMakeArgs: -v
       
       - name: Test
-        run: ctest
+        run: |
+          cd build
+          ctest -c ${{ matrix.configuration }}
