--- a/.github/workflows/Master-Windows.yaml
+++ b/.github/workflows/Master-Windows.yaml
@@ -34,4 +34,4 @@ jobs:
       - name: Test
         run: |
           cd build
-          ctest -c ${{ matrix.configuration }}
+          ctest -C ${{ matrix.configuration }}
