added a test script to check the installation of the cmake

--- a/.github/workflows/Master-Windows.yaml
+++ b/.github/workflows/Master-Windows.yaml
@@ -35,3 +35,8 @@ jobs:
         run: |
           cd build
           ctest -C ${{ matrix.configuration }}
+      
+      - name: install
+        run: |
+          cd build
+          cmake --install ../install --config ${{ matrix.configuration }} 
