Added the missing - to the prefix

--- a/.github/workflows/Master-Windows.yaml
+++ b/.github/workflows/Master-Windows.yaml
@@ -39,4 +39,4 @@ jobs:
       - name: install
         run: |
           cd build
-          cmake --install . -v -prefix ../install --config ${{ matrix.configuration }} 
+          cmake --install . -v --prefix ../install --config ${{ matrix.configuration }} 
