--- a/.github/workflows/Master-Windows.yaml
+++ b/.github/workflows/Master-Windows.yaml
@@ -26,7 +26,7 @@ jobs:
           cmakeListsOrSettingsJson: CMakeListsTxtAdvanced 
           buildDirectory: ${{ github.workspace }}/build
           cmakeBuildType: ${{ matrix.configuration }} 
-          cmakeAppendedArgs: -DENABLE_IPO:BOOL=True -DENABLE_TESTING:BOOL=True  
+          cmakeAppendedArgs: -DENABLE_IPO:BOOL=True -DENABLE_TESTING:BOOL=True -DBUILD_SHARED_LIBS=TRUE 
           buildWithCMake: true
           cmakeGenerator: VS16Win64 
           buildWithCMakeArgs: -v --config ${{ matrix.configuration }} 
