--- a/.github/workflows/Master-Ubuntu.yaml
+++ b/.github/workflows/Master-Ubuntu.yaml
@@ -19,20 +19,34 @@ jobs:
         uses: actions/checkout@v2.1.0
         with:
           submodules: recursive
-
-      - name: Configure
-        run: |
-          mkdir build
-          cd build 
-          cmake ..
-    
-      - name: Build - Release
-        if: matrix.configuration == 'Release'
-        run: cmake -DENABLE_IPO:BOOL=True -DENABLE_TESTING:BOOL=True -DCMAKE_BUILD_TYPE=RELEASE --build build
-      
-      - name: Build - Debug
-        if: matrix.configuration == 'Debug'
-        run: cmake -DENABLE_IPO:BOOL=False -DENABLE_TESTING:BOOL=True -DCMAKE_BUILD_TYPE=DEBUG --build build
+     
+      - name: Build
+        uses: lukka/run-cmake@v2
+        with:
+          cmakeListsOrSettingsJson: CMakeListsTxtAdvanced 
+          buildDirectory: ${{ github.workspace }}/build
+          cmakeBuildType: ${{ matrix.configuration }} 
+          cmakeAppendedArgs: -DENABLE_IPO:BOOL=True -DENABLE_TESTING:BOOL=True
+          buildWithCMake: true
+          cmakeGenerator: Ninja 
+          buildWithCMakeArgs: -v --config ${{ matrix.configuration }} 
       
       - name: Test
-        run: cd build && ctest
+        run: |
+          cd build
+          ctest -C ${{ matrix.configuration }}
+      
+      - name: install
+        run: |
+          cd build
+          cmake --install . -v --prefix ../../install --config ${{ matrix.configuration }} 
+
+      - name: Deploy
+        uses: actions/upload-artifact@v2
+        with:
+          name: ${{ matrix.configuration }}_exports
+          path: ${{ runner.workspace }}/install
+          
+      - name: Display deployment structure
+        run: ls -R
+        working-directory: ${{ runner.workspace }}/install  
