--- a/.github/workflows/Master-MacOS.yml
+++ b/.github/workflows/Master-MacOS.yml
@@ -26,7 +26,7 @@ jobs:
           cmakeListsOrSettingsJson: CMakeListsTxtAdvanced 
           buildDirectory: ${{ github.workspace }}/build
           cmakeBuildType: ${{ matrix.configuration }} 
-          cmakeAppendedArgs: -DENABLE_IPO:BOOL=True -DENABLE_TESTING:BOOL=True
+          cmakeAppendedArgs: -DENABLE_IPO:BOOL=True -DENABLE_TESTING:BOOL=True -DCMAKE_CXX_STANDARD=17
           buildWithCMake: true
           cmakeGenerator: VS16Win64 
           buildWithCMakeArgs: -v --config ${{ matrix.configuration }} 
