Added the basic types and test for the premitive types. Removed the int 128 as it might not be available in all platforms

--- a/Blaze/Engine/Base/CMakeLists.txt
+++ b/Blaze/Engine/Base/CMakeLists.txt
@@ -1,7 +1,7 @@
  add_library(
 	blaze_engine_base
 	src/app.cpp
-)
+ "include/Blaze/Engine/Base/types.hpp")
 
 target_include_directories(blaze_engine_base 
 	INTERFACE
