Renamed the generic types header to the base_types to indicate that this header only contains the values for the base types

--- a/Blaze/Engine/Base/CMakeLists.txt
+++ b/Blaze/Engine/Base/CMakeLists.txt
@@ -1,7 +1,6 @@
  add_library(
 	blaze_engine_base
-	src/app.cpp
- "include/Blaze/Engine/Base/types.hpp")
+	src/app.cpp)
 
 target_include_directories(blaze_engine_base 
 	INTERFACE
