--- a/Blaze/Engine/Base/test/CMakeLists.txt
+++ b/Blaze/Engine/Base/test/CMakeLists.txt
@@ -1,11 +1,12 @@
 add_executable(
 	blaze_test_engine_base
 	"Types/test_base_types.cpp"
-)
+	"Types/test_vector2.cpp")
 
 target_link_libraries(
 	blaze_test_engine_base
 	PRIVATE Blaze::Engine::Base GTest::GTest GTest::GTest::Main
+	INTERFACE Blaze::ProjectOption
 )
 
 add_test(NAME blaze_test_engine_base COMMAND blaze_test_engine_base)
