Added a vector3 class and its unittest

--- a/Blaze/Engine/Base/CMakeLists.txt
+++ b/Blaze/Engine/Base/CMakeLists.txt
@@ -1,6 +1,8 @@
  add_library(
 	blaze_engine_base
-	"src/Types/Vector2.cpp")
+	src/Types/Vector2.cpp 
+	src/Types/Vector3.cpp
+)
 
 target_include_directories(blaze_engine_base 
 	INTERFACE
