Added a vector4 class to the basic types. Also added unit-test for it

--- a/Blaze/Engine/Base/CMakeLists.txt
+++ b/Blaze/Engine/Base/CMakeLists.txt
@@ -2,7 +2,8 @@
 	blaze_engine_base
 	src/Types/Vector2.cpp 
 	src/Types/Vector3.cpp
-)
+	src/Types/Vector4.cpp
+ )
 
 target_include_directories(blaze_engine_base 
 	INTERFACE
