--- a/Blaze/Engine/Math/CMakeLists.txt
+++ b/Blaze/Engine/Math/CMakeLists.txt
@@ -1,7 +1,7 @@
  add_library(
 	blaze_engine_math
 	"private/Types/IntVector2.cpp"
-)
+	"private/Types/IntVector3.cpp")
 
 target_include_directories(blaze_engine_math 
 	INTERFACE
