Added a unit for intvector4 and a unit-test for it

--- a/Blaze/Engine/Math/CMakeLists.txt
+++ b/Blaze/Engine/Math/CMakeLists.txt
@@ -1,7 +1,8 @@
  add_library(
 	blaze_engine_math
 	"private/Types/IntVector2.cpp"
-	"private/Types/IntVector3.cpp")
+	"private/Types/IntVector3.cpp" 
+	"private/Types/IntVector4.cpp")
 
 target_include_directories(blaze_engine_math 
 	INTERFACE
