Defined a installed interface for the blaze::engine::math component

--- a/Blaze/Engine/Math/CMakeLists.txt
+++ b/Blaze/Engine/Math/CMakeLists.txt
@@ -10,6 +10,7 @@ target_include_directories(blaze_engine_math
 		$<INSTALL_INTERFACE:include>
 	PUBLIC
 		$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>	
+		$<INSTALL_INTERFACE:include>
 )
 
 target_link_libraries(
