--- a/Blaze/Engine/Math/test/CMakeLists.txt
+++ b/Blaze/Engine/Math/test/CMakeLists.txt
@@ -4,7 +4,8 @@ add_executable(
 	"Types/test_base_types.cpp"
 	"Types/test_IntVector2.cpp"
 	"Types/test_IntVector3.cpp" 
-	"Types/test_IntVector4.cpp")
+	"Types/test_IntVector4.cpp" 
+	"Types/test_FloatVector3.cpp")
 
 target_link_libraries(
 	blaze_test_engine_math
