--- a/Blaze/Engine/Math/CMakeLists.txt
+++ b/Blaze/Engine/Math/CMakeLists.txt
@@ -3,6 +3,7 @@
 	"private/Types/IntVector2.cpp"
 	"private/Types/IntVector3.cpp" 
 	"private/Types/IntVector4.cpp"
+	"private/Types/FloatVector2.cpp" 
 	"private/Types/FloatVector3.cpp")
 
 target_include_directories(blaze_engine_math 
