--- a/Blaze/Engine/Math/CMakeLists.txt
+++ b/Blaze/Engine/Math/CMakeLists.txt
@@ -4,7 +4,8 @@
 	"private/Types/IntVector3.cpp" 
 	"private/Types/IntVector4.cpp"
 	"private/Types/FloatVector2.cpp" 
-	"private/Types/FloatVector3.cpp")
+	"private/Types/FloatVector3.cpp" 
+	"private/Types/FloatVector4.cpp")
 
 target_include_directories(blaze_engine_math 
 	INTERFACE
