Added a basic matrix implementation

--- a/Blaze/Engine/Math/test/CMakeLists.txt
+++ b/Blaze/Engine/Math/test/CMakeLists.txt
@@ -7,7 +7,8 @@ add_executable(
 	"Types/test_IntVector4.cpp" 
 	"Types/test_FloatVector2.cpp" 
 	"Types/test_FloatVector3.cpp" 
-	"Types/test_FloatVector4.cpp")
+	"Types/test_FloatVector4.cpp" 
+	"Types/test_Matrix4X4.cpp")
 
 target_link_libraries(
 	blaze_test_engine_math
