--- a/Blaze/Engine/Math/CMakeLists.txt
+++ b/Blaze/Engine/Math/CMakeLists.txt
@@ -5,7 +5,8 @@
 	"private/Types/IntVector4.cpp"
 	"private/Types/FloatVector2.cpp" 
 	"private/Types/FloatVector3.cpp" 
-	"private/Types/FloatVector4.cpp")
+	"private/Types/FloatVector4.cpp"
+	"private/Types/Matrix4X4.cpp")
 
 target_include_directories(blaze_engine_math 
 	INTERFACE
