Added a console layer class and define its adapter interface

--- a/Blaze/Engine/Core/CMakeLists.txt
+++ b/Blaze/Engine/Core/CMakeLists.txt
@@ -6,8 +6,7 @@
 	"private/Math/FloatVector2.cpp" 
 	"private/Math/FloatVector3.cpp" 
 	"private/Math/FloatVector4.cpp"
-	"private/Math/Matrix4X4.cpp" "include/Blaze/Engine/Core/Types/HashedString.hpp"
-	)
+	"private/Math/Matrix4X4.cpp" "private/Logging/ConsoleLogger.cpp")
 
 target_include_directories(blaze_engine_core
 	INTERFACE
