Add editor and spdlog  project to the installation target

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -49,6 +49,7 @@ add_subdirectory(Blaze)
 install(
 	TARGETS
 		blaze_engine_core
+		blaze_editor
 	LIBRARY DESTINATION lib
 	ARCHIVE DESTINATION lib
 	RUNTIME DESTINATION bin
