Added a stopwatch class that can be stopped and resumed

--- a/Blaze/Engine/Core/CMakeLists.txt
+++ b/Blaze/Engine/Core/CMakeLists.txt
@@ -11,7 +11,8 @@
 	"private/Window/WindowFactory.cpp" 
 	"private/Application/Application.cpp"
 	"private/Time/Timer.cpp" 
-	"private/Time/CalenderClock.cpp")
+	"private/Time/CalenderClock.cpp" 
+	"private/Time/StopWatch.cpp")
 
 target_include_directories(blaze_engine_core
 	INTERFACE
