Added the notion of systems and pipelines to the application

--- a/Blaze/Engine/Core/CMakeLists.txt
+++ b/Blaze/Engine/Core/CMakeLists.txt
@@ -10,6 +10,7 @@
 	"private/Logging/ConsoleLogger.cpp"
 	"private/Window/WindowFactory.cpp" 
 	"private/Application/Application.cpp"
+	"private/Application/Pipeline.cpp"
 	"private/Time/Timer.cpp" 
 	"private/Time/CalenderClock.cpp" 
 	"private/Time/StopWatch.cpp" 
