Added a new type identifier class

--- a/Blaze/Engine/Core/test/CMakeLists.txt
+++ b/Blaze/Engine/Core/test/CMakeLists.txt
@@ -13,7 +13,8 @@ add_executable(
 	"Math/test_Matrix4X4.cpp" 
 	"Logging/test_ConsoleLogger.cpp" 
 	"Logging/mock_ConsoleLoggerAdapter.cpp" 
-	"DesignPatterns/test_ServiceLocator.cpp")
+	"DesignPatterns/test_ServiceLocator.cpp" 
+	"Component/test_TypeIdentifier.cpp")
 
 target_link_libraries(
 	blaze_test_engine_core
