--- a/Blaze/Engine/Core/CMakeLists.txt
+++ b/Blaze/Engine/Core/CMakeLists.txt
@@ -14,7 +14,8 @@
 	"private/Time/Timer.cpp" 
 	"private/Time/CalenderClock.cpp" 
 	"private/Time/StopWatch.cpp" 
-	"private/Time/Clock.cpp")
+	"private/Time/Clock.cpp"  
+	"private/Component/TypeIdentifier.cpp")
 
 target_include_directories(blaze_engine_core
 	INTERFACE
