--- a/Blaze/Engine/Core/test/CMakeLists.txt
+++ b/Blaze/Engine/Core/test/CMakeLists.txt
@@ -14,7 +14,8 @@ add_executable(
 	"Math/test_Matrix4X4.cpp" 
 	"Logging/test_ConsoleLogger.cpp" 
 	"Logging/mock_ConsoleLoggerAdapter.cpp" 
-	"DesignPatterns/test_ServiceLocator.cpp")
+	"DesignPatterns/test_ServiceLocator.cpp" 
+	"DataStructures/test_SparseSet.cpp")
 
 target_link_libraries(
 	blaze_test_engine_core
