--- a/Blaze/Engine/Core/CMakeLists.txt
+++ b/Blaze/Engine/Core/CMakeLists.txt
@@ -14,7 +14,7 @@
 	"private/Time/Timer.cpp" 
 	"private/Time/CalenderClock.cpp" 
 	"private/Time/StopWatch.cpp" 
-	"private/Time/Clock.cpp")
+	"private/Time/Clock.cpp" "include/Blaze/Engine/Core/Entity/entity.hpp")
 
 target_include_directories(blaze_engine_core
 	INTERFACE
@@ -27,7 +27,11 @@ target_include_directories(blaze_engine_core
 
 target_link_libraries(
 	blaze_engine_core
-	PUBLIC Blaze::ProjectOption Blaze::ProjectWarnings DirectXMath
+	PUBLIC 
+		Blaze::ProjectOption 
+		Blaze::ProjectWarnings 
+		DirectXMath
+		entt
 )
 
 add_library(Blaze::Engine::Core ALIAS blaze_engine_core)
