--- a/Blaze/Engine/CMakeLists.txt
+++ b/Blaze/Engine/CMakeLists.txt
@@ -1,6 +1,8 @@
 add_subdirectory(Core)
-add_subdirectory(SpdLog)
+add_subdirectory(Graphics)
 add_subdirectory(PlatformWindows)
+add_subdirectory(PlatformDirectX12)
+add_subdirectory(SpdLog)
 
  add_library(
 	blaze_engine
@@ -13,6 +15,8 @@ target_link_libraries(
 		Blaze::ProjectOption 
 		Blaze::ProjectWarnings 
 		Blaze::Engine::Core
+		Blaze::Engine::Graphics
+		Blaze::Engine::Platform::DirectX12
 		Blaze::Engine::Platform::Windows
 		Blaze::Engine::SpdLog
 )
