--- a/Blaze/Engine/PlatformDirectX12/CMakeLists.txt
+++ b/Blaze/Engine/PlatformDirectX12/CMakeLists.txt
@@ -3,7 +3,16 @@
 	"private/DX12GraphicContextFactoryAdapter.cpp" 
 	"private/DX12GraphicContext.cpp" 
 	"private/DX12DebugController.cpp" 
-	"private/DX12DeviceFactory.cpp")
+	"private/DX12DeviceFactory.cpp" 
+	"private/DX12CommandQueueFactory.cpp" 
+	"private/DX12CommandListFactory.cpp"
+	"private/DX12SwapChainFactory.cpp"
+	"private/DX12FeatureChecker.cpp"
+	"private/DX12DXGIFactoryFactory.cpp" 
+	"private/DX12CommandAllocatorFactory.cpp" 
+	"private/DX12DescriptorHeapFactory.cpp" 
+	"private/DX12FenceFactory.cpp" 
+	"private/DX12FenceEventFactory.cpp")
 
 target_include_directories(blaze_engine_platform_directX12
 	INTERFACE
